--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ slug: home
 <section class="ph3 ph4-ns pv4 pv6-ns bg-white" id="strategy">
   <h2 class="f2 f1-ns lh-title tracked-tight wow animated fadeInDown">Strategy</h2>
   <h3 class="f4 f3-ns normal measure-narrow lh-copy wow animated fadeIn">{{ site.title }} focuses on design and technology as a broader approach to experience, product performance and consumer perception.</h3>
-  <a class="dib link blue underline-hover b ttu mv4" href="{{ site.url }}{{ site.baseurl }}strategy.html">Strategy Keynotes<i class="fa fa-fw fa-long-arrow-right"></i></a>
+  <a class="dib link blue underline-hover b ttu mv4" href="{{ site.baseurl }}strategy.html">Strategy Keynotes<i class="fa fa-fw fa-long-arrow-right"></i></a>
   <p class="measure lh-copy wow animated fadeIn">{{ site.title }} combines new tools with traditional research expertise to develop a deep understanding of the user's wants and needs, and to guide strategy, design and technology decisions.</p>
   <ul class="list pa0 mv4 measure-wide cf mid-gray wow animated fadeInUp">
     <label class="db mv1 tracked light-silver b ttu"><small>Services</small></label>
@@ -20,7 +20,7 @@ slug: home
 <section class="ph3 ph4-ns pv4 pv6-ns bg-near-white" id="design">
   <h2 class="f2 f1-ns lh-title tracked-tight wow animated fadeInDown">Design</h2>
   <h3 class="f4 f3-ns normal measure-narrow lh-copy wow animated fadeIn">{{ site.title }} strives to create work that is distinct, effective, inspirational and forward-thinking.</h3>
-  <a class="dib link blue underline-hover b ttu mv4" href="{{ site.url }}{{ site.baseurl }}design.html">Design Samples<i class="fa fa-fw fa-long-arrow-right"></i></a>
+  <a class="dib link blue underline-hover b ttu mv4" href="{{ site.baseurl }}design.html">Design Samples<i class="fa fa-fw fa-long-arrow-right"></i></a>
   <p class="measure lh-copy wow animated fadeIn">An iterative approach ensures that our clients' goals are realized at every stage of the creative process. {{ site.title }} builds an understanding of all the inputs and outputs of your project to create a concise and engaging approach to design.</p>
   <ul class="list pa0 mv4 measure-wide cf mid-gray wow animated fadeInUp">
     <label class="db mv1 tracked light-silver b ttu"><small>Services</small></label>
@@ -36,7 +36,7 @@ slug: home
 <section class="ph3 ph4-ns pv4 pv6-ns bg-white" id="technology">
   <h2 class="f2 f1-ns lh-title tracked-tight wow animated fadeInDown">Technology</h2>
   <h3 class="f4 f3-ns normal measure-narrow lh-copy wow animated fadeIn">{{ site.title }} takes an agnostic approach towards technology to best fit your needs.</h3>
-  <a class="dib link blue underline-hover b ttu mv4" href="{{ site.url }}{{ site.baseurl }}technology.html">Resources List<i class="fa fa-fw fa-long-arrow-right"></i></a>
+  <a class="dib link blue underline-hover b ttu mv4" href="{{ site.baseurl }}technology.html">Resources List<i class="fa fa-fw fa-long-arrow-right"></i></a>
   <p class="measure lh-copy wow animated fadeIn">{{ site.title }} builds across all devices, focusing on a client's entire digital ecosystem with context, mobile and user center design at its core to turn your ideas and designs into functional, reliable products and services.</p>
   <ul class="list pa0 mv4 measure-wide cf mid-gray wow animated fadeInUp">
     <label class="db mv1 tracked light-silver b ttu"><small>Services</small></label>
