--- a/strategy.html
+++ b/strategy.html
@@ -100,7 +100,7 @@ slug: strategy
             <li class="dib mr2"><abbr title="Social Media"><i class="fa fa-fw fa-facebook" aria-hidden="true"></i></abbr><small>Facebook</small></li>
           </ul>
         </aside>
-        <p class="tl f6 pa0 lh-copy measure">{{ person.persona }}</p>
+        <p class="tl pa0 lh-copy measure measure-wide-l"><small>{{ person.persona }}</small></p>
       </div>
     </article>
     {% endfor %}
