--- a/design.html
+++ b/design.html
@@ -3,3 +3,51 @@ layout: page
 title: Design
 slug: design
 ---
+<section class="ph3 ph4-ns pv4 pv6-ns bg-near-white">
+  <div data-flickity='{ "wrapAround": true, "adaptiveHeight": true, "lazyLoad": true }'>
+    <center class="cf w-100 mw8 center">
+      <figure class="w-100 w-third-l ma0 fl tc">
+        <img data-flickity-lazyload="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-appchain-RGB.png" src="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-appchain-RGB.png" class="br-100 mh3 w4 h4 w5-ns h5-ns" title="Appchain">
+        <figcaption class="f6 f5-ns mv2 mv3-ns lh-copy"><small>Primary</small></figcaption>
+      </figure>
+      <figure class="w-100 w-third-l ma0 fl tc">
+        <img data-flickity-lazyload="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-appchain-ALT_K0.png" src="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-appchain-ALT_K0.png" class="br-100 mh3 w4 h4 w5-ns h5-ns" title="Appchain">
+        <figcaption class="f6 f5-ns mv2 mv3-ns lh-copy"><small>Light</small></figcaption>
+      </figure>
+      <figure class="w-100 w-third-l ma0 fl tc">
+        <img data-flickity-lazyload="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-appchain-ALT_K100.png" src="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-appchain-ALT_K100.png" class="br-100 mh3 w4 h4 w5-ns h5-ns" title="Appchain">
+        <figcaption class="f6 f5-ns mv2 mv3-ns lh-copy"><small>Dark</small></figcaption>
+      </figure>
+    </center>
+    <center class="w-100">
+      <figure class="w-100 ma0 tc">
+        <img data-flickity-lazyload="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-kingsecurity-RGB.png" src="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-kingsecurity-RGB.png" class="db w-100 center mw7 mh3" title="King Security">
+        <figcaption class="f6 f5-ns center mv2 mv3-ns measure-wide lh-copy"><small>Primary</small></figcaption>
+      </figure>
+    </center>
+    <center class="w-100">
+      <figure class="w-100 ma0 tc">
+        <img data-flickity-lazyload="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-kingsecurity-K10.png" src="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-kingsecurity-K10.png" class="db w-100 center mw7 mh3" title="King Security">
+        <figcaption class="f6 f5-ns center mv2 mv3-ns measure-wide lh-copy"><small>Alternative</small></figcaption>
+      </figure>
+    </center>
+  </div>
+</section>
+<section class="ph3 ph4-ns pv4 pv6-ns tc tl-ns">
+  <div class="w-100" data-flickity='{ "wrapAround": true }'>
+    <center class="cf ph5-ns w-100">
+      <img src="https://s-media-cache-ak0.pinimg.com/originals/cd/be/fb/cdbefb5cf55dc544400ca73e0cb20785.jpg" class="db br-100 ba bw3 center b--near-white bg-white w-4 h4 h5-l w5-l o-80 fl-l" title="Dieter Rams">
+      <blockquote class="fl-l tl-l center ma0 mh5-l measure-wide">
+        <h1 class="f1 f-5-l mv0 lh-title tracked-tight wow animated fadeInDown" data-action="cursor">Less but better</h1>
+        <h2 class="f3 f2-l mv1 lh-title wow animated fadeInUp">Good design is thorough, down to the last detail.</h2>
+      </blockquote>
+    </center>
+    <center class="cf ph5-ns w-100">
+      <img src="{{ site.baseurl }}assets/images/avatar.png" class="db br-100 ba bw3 center b--near-white bg-white w-4 h4 h5-l w5-l o-80 fl-l" title="Bryan Colosky">
+      <blockquote class="fl-l tl-l center ma0 mh5-l measure-wide">
+        <h1 class="f1 f-5-l mv0 lh-title tracked-tight wow animated fadeInDown" data-action="cursor">Context is king</h1>
+        <h2 class="f3 f2-l mv0 lh-title wow animated fadeInUp">The context of our experience makes it unique.</h2>
+      </blockquote>
+    </center>
+  </div>
+</section>
