--- a/design.html
+++ b/design.html
@@ -33,21 +33,12 @@ slug: design
     </center>
   </div>
 </section>
-<section class="ph3 ph4-ns pv4 pv6-ns tc tl-ns">
-  <div class="w-100" data-flickity='{ "wrapAround": true }'>
-    <center class="cf ph5-ns w-100">
-      <img src="https://s-media-cache-ak0.pinimg.com/originals/cd/be/fb/cdbefb5cf55dc544400ca73e0cb20785.jpg" class="db br-100 ba bw3 center b--near-white bg-white w-4 h4 h5-l w5-l o-80 fl-l" title="Dieter Rams">
-      <blockquote class="fl-l tl-l center ma0 mh5-l measure-wide">
-        <h1 class="f1 f-5-l mv0 lh-title tracked-tight wow animated fadeInDown" data-action="cursor">Less but better</h1>
-        <h2 class="f3 f2-l mv1 lh-title wow animated fadeInUp">Good design is thorough, down to the last detail.</h2>
-      </blockquote>
-    </center>
-    <center class="cf ph5-ns w-100">
-      <img src="{{ site.baseurl }}assets/images/avatar.png" class="db br-100 ba bw3 center b--near-white bg-white w-4 h4 h5-l w5-l o-80 fl-l" title="Bryan Colosky">
-      <blockquote class="fl-l tl-l center ma0 mh5-l measure-wide">
-        <h1 class="f1 f-5-l mv0 lh-title tracked-tight wow animated fadeInDown" data-action="cursor">Context is king</h1>
-        <h2 class="f3 f2-l mv0 lh-title wow animated fadeInUp">The context of our experience makes it unique.</h2>
-      </blockquote>
-    </center>
-  </div>
+<section class="ph3 ph4-ns pv4 pv6-ns relative bg-navy white">
+  <div id="particles-js" class="absolute absolute--fill"></div>
+  <center class="center w-100">
+    <figure class="mw6">
+      <img src="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-kelvin-RGB.png" class="w-100" title="Kelvin">
+      <figcaption class="f6 f5-ns mv2 mv3-ns lh-copy"><time><small>2016</small></time></figcaption>
+    </figure>
+  </center>
 </section>
