--- a/strategy.html
+++ b/strategy.html
@@ -27,20 +27,28 @@ slug: strategy
   <cite class="fs-normal silver"><a class="dib link blue underline-hover b ttu" href="strategy.html">U.S. Bureau of Labor Statistics<i class="fa fa-fw fa-long-arrow-right"></i></a></cite>
 </section>
 <section class="ph3 ph4-ns pv4 pv6-ns tc tl-ns">
-  <div class="w-100" data-flickity='{ "wrapAround": true }'>
-    <center class="cf ph5-ns w-100">
-      <img src="https://s-media-cache-ak0.pinimg.com/originals/cd/be/fb/cdbefb5cf55dc544400ca73e0cb20785.jpg" class="db br-100 ba bw3 center b--near-white bg-white w-4 h4 h5-l w5-l o-80 fl-l" title="Dieter Rams">
-      <blockquote class="fl-l tl-l center ma0 mh5-l measure-wide">
-        <h1 class="f1 f-5-l mv0 lh-title tracked-tight wow animated fadeInDown" data-action="cursor">Less but better</h1>
-        <h2 class="f3 f2-l mv1 lh-title wow animated fadeInUp">Good design is thorough, down to the last detail.</h2>
-      </blockquote>
+  <div data-flickity='{ "wrapAround": true, "adaptiveHeight": true, "lazyLoad": true }'>
+    <center class="w-100">
+      <figure class="mw8 center tc cf">
+        <img data-flickity-lazyload="https://s-media-cache-ak0.pinimg.com/originals/cd/be/fb/cdbefb5cf55dc544400ca73e0cb20785.jpg" src="https://s-media-cache-ak0.pinimg.com/originals/cd/be/fb/cdbefb5cf55dc544400ca73e0cb20785.jpg" class="br-100 ba bw3 center b--near-white bg-white w-4 h4 h5-l w5-l o-80 fl-l" title="Dieter Rams">
+        <figcaption class="fl-l tl-l center ma0 mh5-l">
+          <blockquote class="ma0 measure-wide lh-copy">
+            <h1 class="f1 f-5-l mv0 lh-title tracked-tight wow animated fadeInDown" data-action="cursor">Less but better</h1>
+            <h2 class="f3 f2-l mv1 lh-title wow animated fadeInUp">Good design is thorough, down to the last detail.</h2>
+          </blockquote>
+        </figcaption>
+      </figure>
     </center>
-    <center class="cf ph5-ns w-100">
-      <img src="{{ site.baseurl }}assets/images/avatar.png" class="db br-100 ba bw3 center b--near-white bg-white w-4 h4 h5-l w5-l o-80 fl-l" title="Bryan Colosky">
-      <blockquote class="fl-l tl-l center ma0 mh5-l measure-wide">
-        <h1 class="f1 f-5-l mv0 lh-title tracked-tight wow animated fadeInDown" data-action="cursor">Context is king</h1>
-        <h2 class="f3 f2-l mv0 lh-title wow animated fadeInUp">The context of our experience makes it unique.</h2>
-      </blockquote>
+    <center class="w-100">
+      <figure class="mw8 center tc cf">
+        <img data-flickity-lazyload="{{ site.baseurl }}assets/images/avatar.png" src="{{ site.baseurl }}assets/images/avatar.png" class="br-100 ba bw3 center b--near-white bg-white w-4 h4 h5-l w5-l o-80 fl-l" title="Bryan Colosky">
+        <figcaption class="fl-l tl-l center ma0 mh5-l">
+          <blockquote class="ma0 measure-wide lh-copy">
+            <h1 class="f1 f-5-l mv0 lh-title tracked-tight wow animated fadeInDown" data-action="cursor">Context is king</h1>
+            <h2 class="f3 f2-l mv1 lh-title wow animated fadeInUp">The context of our experience makes it unique.</h2>
+          </blockquote>
+        </figcaption>
+      </figure>
     </center>
   </div>
 </section>
