--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ slug: home
         <div id="mc_embed_signup_scroll">
           <div class="mc-field-group input-group">
             <label class="dn" for="mce-EMAIL">Email</label>
-            <input type="email" value="" name="EMAIL" class="required w6 email w-third input-reset dib mv3 br-pill ba ph4 pv3 outline-0 b--light-silver" id="mce-EMAIL" placeholder="Email">
+            <input type="email" value="" name="EMAIL" class="required w5 email w-third-ns input-reset dib mv3 br-pill ba ph4 pv3 outline-0 b--light-silver" id="mce-EMAIL" placeholder="Email">
           </div>
         </div>
         <input type="submit" class="input-reset mv3 ph4 pv3 outline-0 mh2 br-pill ba bw1 b ttu b--dark-gray dark-gray bg-transparent dim" value="Subscribe">
