--- a/design.html
+++ b/design.html
@@ -5,30 +5,24 @@ slug: design
 ---
 <section class="ph3 ph4-ns pv4 pv6-ns bg-near-white">
   <div data-flickity='{ "wrapAround": true, "adaptiveHeight": true, "lazyLoad": true }'>
+    <center class="w-100">
+      <figure class="w-100 ma0 tc">
+        <img data-flickity-lazyload="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-nebuddha.png" src="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-kingsecurity-RGB.png" class="db w-100 center mw7 mh3 wow animated fadeInDown" title="Nebuddha">
+        <figcaption class="f6 f5-ns center mv2 mv3-ns measure-wide lh-copy">Nebuddha <small>Primary</small></figcaption>
+      </figure>
+    </center>
     <center class="cf w-100 mw8 center">
       <figure class="w-100 w-third-l ma0 fl tc">
-        <img data-flickity-lazyload="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-appchain-RGB.png" src="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-appchain-RGB.png" class="br-100 mh3 w4 h4 w5-ns h5-ns wow animated fadeInDown" title="Appchain">
-        <figcaption class="f6 f5-ns mv2 mv3-ns lh-copy">Bewölkt<br> <small>Primary</small></figcaption>
+        <img data-flickity-lazyload="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-appchain-RGB.png" src="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-appchain-RGB.png" class="br-100 mh3 w5 wow animated fadeInDown" title="Appchain">
+        <figcaption class="f6 f5-ns mv2 mv3-ns lh-copy">Nebuddha Icon <small>Primary</small></figcaption>
       </figure>
       <figure class="w-100 w-third-l ma0 fl tc">
-        <img data-flickity-lazyload="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-appchain-ALT_K0.png" src="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-appchain-ALT_K0.png" class="br-100 mh3 w4 h4 w5-ns h5-ns wow animated fadeInDown" title="Appchain">
-        <figcaption class="f6 f5-ns mv2 mv3-ns lh-copy">Bewölkt<br> <small>Light</small></figcaption>
+        <img data-flickity-lazyload="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-appchain-ALT_K0.png" src="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-appchain-ALT_K0.png" class="br-100 mh3 w5 wow animated fadeInDown" title="Appchain">
+        <figcaption class="f6 f5-ns mv2 mv3-ns lh-copy">Nebuddha Icon <small>Light</small></figcaption>
       </figure>
       <figure class="w-100 w-third-l ma0 fl tc">
-        <img data-flickity-lazyload="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-appchain-ALT_K100.png" src="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-appchain-ALT_K100.png" class="br-100 mh3 w4 h4 w5-ns h5-ns wow animated fadeInDown" title="Appchain">
-        <figcaption class="f6 f5-ns mv2 mv3-ns lh-copy">Bewölkt<br> <small>Dark</small></figcaption>
-      </figure>
-    </center>
-    <center class="w-100">
-      <figure class="w-100 ma0 tc">
-        <img data-flickity-lazyload="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-kingsecurity-RGB.png" src="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-kingsecurity-RGB.png" class="db w-100 center mw7 mh3 wow animated fadeInDown" title="King Security">
-        <figcaption class="f6 f5-ns center mv2 mv3-ns measure-wide lh-copy"><small>Primary</small></figcaption>
-      </figure>
-    </center>
-    <center class="w-100">
-      <figure class="w-100 ma0 tc">
-        <img data-flickity-lazyload="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-kingsecurity-K10.png" src="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-kingsecurity-K10.png" class="db w-100 center mw7 mh3 wow animated fadeInDown" title="King Security">
-        <figcaption class="f6 f5-ns center mv2 mv3-ns measure-wide lh-copy"><small>Alternative</small></figcaption>
+        <img data-flickity-lazyload="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-appchain-ALT_K100.png" src="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-appchain-ALT_K100.png" class="br-100 mh3 w5 wow animated fadeInDown" title="Appchain">
+        <figcaption class="f6 f5-ns mv2 mv3-ns lh-copy">Nebuddha Icon <small>Dark</small></figcaption>
       </figure>
     </center>
   </div>
