--- a/strategy.html
+++ b/strategy.html
@@ -141,3 +141,10 @@ slug: strategy
     <cite class="fs-normal silver"><a class="dib link blue underline-hover b ttu" href="strategy.html">U.S. Bureau of Labor Statistics<i class="fa fa-fw fa-long-arrow-right"></i></a></cite>
   </figure>
 </section>
+<section class="ph3 ph4-ns pv3 pv5-ns near-white bg-near-black tc">
+  <h2 class="f2 f1-ns mv0 lh-title tracked-tight wow animated fadeInDown">Get a Quote</h2>
+  <h3 class="f4 f3-ns mv2 normal lh-copy wow animated fadeIn">Want to work with {{ site.title }}?</h3>
+  <div class="wow animated fadeInUp">
+    <a class="dim no-underline br-pill ba bw1 ph4 pv3 mv2 dib near-white b ttu tracked" href="mailto:info@studiocraft.cc">info@studiocraft.cc</a>
+  </div>
+</section>
