--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -2,6 +2,8 @@
 layout: page
 title: Privacy Policy
 slug: privacy
+sitemap:
+  exclude: true
 ---
 <section class="ph3 ph4-ns pv4 pv6-ns bg-white">
   <article>
