--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -2,6 +2,9 @@
 layout: page
 title: Terms of Use
 slug: tos
+permalink: /terms-of-service.html
+sitemap:
+  exclude: true
 ---
 <section class="ph3 ph4-ns pv4 pv6-ns bg-white">
   <article>
