--- a/design.html
+++ b/design.html
@@ -3,15 +3,59 @@ layout: page
 title: Design
 slug: design
 ---
-<section class="ph3 ph4-ns pv4 pv6-ns bg-near-white">
-  <div data-flickity='{ "wrapAround": true, "adaptiveHeight": true, "lazyLoad": true }'>
-    <center class="w-100">
-      <figure class="w-100 ma0 tc">
-        <img data-flickity-lazyload="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-nebuddha.png" src="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-kingsecurity-RGB.png" class="db w-100 center mw7 mh3 wow animated fadeInDown" title="Nebuddha">
-        <figcaption class="f6 f5-ns center mv2 mv3-ns measure-wide lh-copy">Nebuddha <small>Primary</small></figcaption>
-      </figure>
-    </center>
-    <center class="cf w-100 mw8 center">
+<section class="ph3 ph4-ns pv4 pv6-ns bg-white">
+  <h2 class="f2 f1-ns lh-title tracked-tight wow animated fadeInDown">Visual Design</h2>
+  <h3 class="f4 f3-ns normal measure-narrow lh-copy wow animated fadeIn">The best solutions seamlessly integrate your business objectives with your visual and verbal presentation. Style without substance is meaningless. Good design is timeless.</h3>
+  <center class="mv4 mv5-ns" data-flickity='{ "wrapAround": true }'>
+    <article class="ph3 ph4-ns pv4 pv6-ns relative w-100 bg-navy near-white">
+      <div id="particles-js" class="absolute absolute--fill"></div>
+      <center class="center w-100">
+        <figure class="mw6">
+          <img data-flickity-lazyload="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-kelvin-RGB.png" src="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-kelvin-RGB.png" class="w-100" title="Kelvin">
+          <figcaption class="f6 f5-ns mv2 mv3-ns lh-copy"><time><small>2016</small></time></figcaption>
+        </figure>
+      </center>
+    </article>
+    <article class="ph3 ph4-ns pv4 pv6-ns w-100 bg-near-white near-black">
+      <center class="center w-100">
+        <figure class="mw7">
+          <img data-flickity-lazyload="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-nebuddha.png" src="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-nebuddha.png" class="w-100" title="Nebuddha">
+          <figcaption class="f6 f5-ns mv2 mv3-ns lh-copy">Nebuddha <small>Primary</small></figcaption>
+        </figure>
+      </center>
+    </article>
+    <article class="ph3 ph4-ns pv4 pv6-ns w-100 bg-dark-gray near-white">
+      <center class="center w-100">
+        <figure class="mw6">
+          <img data-flickity-lazyload="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-kingsecurity-RGB.png" src="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-kingsecurity-RGB.png" class="w-100" title="King">
+          <figcaption class="f6 f5-ns mv2 mv3-ns lh-copy">King <small>Primary</small></figcaption>
+        </figure>
+      </center>
+    </article>
+    <article class="ph3 ph4-ns pv5 pv7-ns relative w-100 overflow-hidden">
+      <center class="center w-100 absolute bottom-1">
+        <figure class="mw6">
+          <img data-flickity-lazyload="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-Circus-Co.png" src="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-Circus-Co.png" class="w-100" title="Circus & Co.">
+        </figure>
+      </center>
+      <div id="autoplay" class="absolute absolute--fill">
+        <video class="absolute absolute--fill" data-media='bg-video' preload="none" autoplay="autoplay" loop="loop" muted="muted">
+          <source data-flickity-lazyload="{ site.baseurl }}assets/media/video/circus-co.mp4" src="{{ site.baseurl }}assets/media/video/circus-co.mp4" type="video/mp4">
+          <!-- <source src="{{ site.baseurl }}assets/media/video/portfolio_FILM.webm" type="video/webm">
+          <source src="{{ site.baseurl }}assets/media/video/portfolio_FILM.ogv"  type="video/ogg" codecs="theora, vorbis"> -->
+          Your user agent does not support the HTML5 Video element.
+        </video>
+      </div>
+    </article>
+    <!-- <article class="ph3 ph4-ns pv4 pv6-ns mv4 relative bg-navy white">
+      <center class="center w-100">
+        <figure class="mw6">
+          <img data-flickity-lazyload="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-nebuddha.png" src="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-nebuddha.png" class="db w-100 center mw7 mh3 wow animated fadeInDown" title="Nebuddha">
+          <figcaption class="f6 f5-ns center mv2 mv3-ns measure-wide lh-copy">Kings <small>Primary</small></figcaption>
+        </figure>
+      </center>
+    </article> -->
+    <!-- <center class="cf w-100 mw8 center">
       <figure class="w-100 w-third-l ma0 fl tc">
         <img data-flickity-lazyload="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-appchain-RGB.png" src="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-appchain-RGB.png" class="br-100 mh3 w5 wow animated fadeInDown" title="Appchain">
         <figcaption class="f6 f5-ns mv2 mv3-ns lh-copy">Nebuddha Icon <small>Primary</small></figcaption>
@@ -24,17 +68,16 @@ slug: design
         <img data-flickity-lazyload="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-appchain-ALT_K100.png" src="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-appchain-ALT_K100.png" class="br-100 mh3 w5 wow animated fadeInDown" title="Appchain">
         <figcaption class="f6 f5-ns mv2 mv3-ns lh-copy">Nebuddha Icon <small>Dark</small></figcaption>
       </figure>
-    </center>
-  </div>
-</section>
-<section class="ph3 ph4-ns pv4 pv6-ns relative bg-navy white">
-  <div id="particles-js" class="absolute absolute--fill"></div>
-  <center class="center w-100">
-    <figure class="mw6">
-      <img src="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-kelvin-RGB.png" class="w-100" title="Kelvin">
-      <figcaption class="f6 f5-ns mv2 mv3-ns lh-copy"><time><small>2016</small></time></figcaption>
-    </figure>
+    </center> -->
   </center>
+  <p class="measure lh-copy wow animated fadeIn">{{ site.title }} creates balanced solutions that reach consumers in innovative ways by focusing on the aesthetics of a site and its related materials by strategically implementing images, colors, fonts, and other elements.</p>
+  <ul class="list pa0 mv4 measure-wide cf mid-gray wow animated fadeInUp">
+    <label class="db mv1 tracked light-silver b ttu"><small>Visual Design Capabilities</small></label>
+    <li class="fl-ns w-50-ns"><small>Print</small></li>
+    <li class="fl-ns w-50-ns"><small>Web & Interactive</small></li>
+    <li class="fl-ns w-50-ns"><small>Motion Effects</small></li>
+    <li class="fl-ns w-50-ns"><small>3D & Environmental Design</small></li>
+  </ul>
 </section>
 <section class="ph3 ph4-ns pv3 pv5-ns near-white bg-near-black tc">
   <h2 class="f2 f1-ns mv0 lh-title tracked-tight wow animated fadeInDown">Get a Quote</h2>
