--- a/design.html
+++ b/design.html
@@ -79,6 +79,121 @@ slug: design
     <li class="fl-ns w-50-ns"><small>3D & Environmental Design</small></li>
   </ul>
 </section>
+<section class="ph3 ph4-ns pv4 pv6-ns bg-white">
+  <center class="cf w-100 mw8 center">
+    <figure class="w-50 w-third-m w-20-l ma0 fl tc">
+      <svg id="clock" viewBox="0 0 100 100">
+        <circle id="face" cx="50" cy="50" r="40" style="fill:#1111"/>
+        <g id="hands">
+          <line id="hour" x1="50" y1="50" x2="50" y2="25" style="stroke-width:3px;stroke:#fff"/>
+          <line id="min" x1="50" y1="50" x2="50" y2="15" style="stroke-width:3px;stroke:#fff"/>
+          <line id="sec" x1="50" y1="55" x2="50" y2="12" style="stroke:#9EEBCF"/>
+        </g>
+      </svg>
+      <figcaption class="f6 f5-ns mv2 mv3-ns lh-copy">New York <small>GMT +5</small></figcaption>
+    </figure>
+    <!-- <figure class="w-third w-20-l ma0 fl tc">
+      <svg id="clock" viewBox="0 0 100 100">
+        <circle id="face" cx="50" cy="50" r="40" style="stroke-width:1px; stroke:#111;fill:#fff"/>
+        <g id="hands">
+          <line id="hour" x1="50" y1="50" x2="50" y2="25" style="stroke-width:3px;stroke:#111"/>
+          <line id="min" x1="50" y1="50" x2="50" y2="15" style="stroke-width:3px;stroke:#111"/>
+          <line id="sec" x1="50" y1="55" x2="50" y2="12" style="stroke:#f55"/>
+        </g>
+      </svg>
+      <figcaption class="f6 f5-ns mv2 mv3-ns lh-copy">New York <small>GMT +5</small></figcaption>
+    </figure>
+    <figure class="w-third w-20-l ma0 fl tc">
+      <svg id="clock" viewBox="0 0 100 100">
+        <circle id="face" cx="50" cy="50" r="40" style="stroke-width:1px; stroke:#111;fill:#fff"/>
+        <g id="hands">
+          <line id="hour" x1="50" y1="50" x2="50" y2="25" style="stroke-width:3px;stroke:#111"/>
+          <line id="min" x1="50" y1="50" x2="50" y2="15" style="stroke-width:3px;stroke:#111"/>
+          <line id="sec" x1="50" y1="55" x2="50" y2="12" style="stroke:#f55"/>
+        </g>
+      </svg>
+      <figcaption class="f6 f5-ns mv2 mv3-ns lh-copy">London <small>GMT +5</small></figcaption>
+    </figure>
+    <figure class="w-third w-20-l ma0 fl tc">
+      <svg id="clock" viewBox="0 0 100 100">
+        <circle id="face" cx="50" cy="50" r="40" style="stroke-width:1px; stroke:#111;fill:#fff"/>
+        <g id="hands">
+          <line id="hour" x1="50" y1="50" x2="50" y2="25" style="stroke-width:3px;stroke:#111"/>
+          <line id="min" x1="50" y1="50" x2="50" y2="15" style="stroke-width:3px;stroke:#111"/>
+          <line id="sec" x1="50" y1="55" x2="50" y2="12" style="stroke:#f55"/>
+        </g>
+      </svg>
+      <figcaption class="f6 f5-ns mv2 mv3-ns lh-copy">Tokyo <small>GMT +5</small></figcaption>
+    </figure>
+    <figure class="w-third w-20-l ma0 fl tc">
+      <svg id="clock" viewBox="0 0 100 100">
+        <circle id="face" cx="50" cy="50" r="40" style="stroke-width:1px; stroke:#111;fill:#fff"/>
+        <g id="hands">
+          <line id="hour" x1="50" y1="50" x2="50" y2="25" style="stroke-width:3px;stroke:#111"/>
+          <line id="min" x1="50" y1="50" x2="50" y2="15" style="stroke-width:3px;stroke:#111"/>
+          <line id="sec" x1="50" y1="55" x2="50" y2="12" style="stroke:#f55"/>
+        </g>
+      </svg>
+      <figcaption class="f6 f5-ns mv2 mv3-ns lh-copy">Istanbul <small>GMT +5</small></figcaption>
+    </figure>
+    <figure class="w-third w-20-l ma0 fl tc">
+      <svg id="clock" viewBox="0 0 100 100">
+        <circle id="face" cx="50" cy="50" r="40" style="stroke-width:1px; stroke:#111;fill:#fff"/>
+        <g id="hands">
+          <line id="hour" x1="50" y1="50" x2="50" y2="25" style="stroke-width:3px;stroke:#111"/>
+          <line id="min" x1="50" y1="50" x2="50" y2="15" style="stroke-width:3px;stroke:#111"/>
+          <line id="sec" x1="50" y1="55" x2="50" y2="12" style="stroke:#f55"/>
+        </g>
+      </svg>
+      <figcaption class="f6 f5-ns mv2 mv3-ns lh-copy">Oslo <small>GMT +5</small></figcaption>
+    </figure>
+    <figure class="w-third w-20-l ma0 fl tc">
+      <svg id="clock" viewBox="0 0 100 100">
+        <circle id="face" cx="50" cy="50" r="40" style="stroke-width:1px; stroke:#111;fill:#fff"/>
+        <g id="hands">
+          <line id="hour" x1="50" y1="50" x2="50" y2="25" style="stroke-width:3px;stroke:#111"/>
+          <line id="min" x1="50" y1="50" x2="50" y2="15" style="stroke-width:3px;stroke:#111"/>
+          <line id="sec" x1="50" y1="55" x2="50" y2="12" style="stroke:#f55"/>
+        </g>
+      </svg>
+      <figcaption class="f6 f5-ns mv2 mv3-ns lh-copy">Perth <small>GMT +5</small></figcaption>
+    </figure>
+    <figure class="w-third w-20-l ma0 fl tc">
+      <svg id="clock" viewBox="0 0 100 100">
+        <circle id="face" cx="50" cy="50" r="40" style="stroke-width:1px; stroke:#111;fill:#fff"/>
+        <g id="hands">
+          <line id="hour" x1="50" y1="50" x2="50" y2="25" style="stroke-width:3px;stroke:#111"/>
+          <line id="min" x1="50" y1="50" x2="50" y2="15" style="stroke-width:3px;stroke:#111"/>
+          <line id="sec" x1="50" y1="55" x2="50" y2="12" style="stroke:#f55"/>
+        </g>
+      </svg>
+      <figcaption class="f6 f5-ns mv2 mv3-ns lh-copy">Helsinki <small>GMT +5</small></figcaption>
+    </figure>
+    <figure class="w-third w-20-l ma0 fl tc">
+      <svg id="clock" viewBox="0 0 100 100">
+        <circle id="face" cx="50" cy="50" r="40" style="stroke-width:1px; stroke:#111;fill:#fff"/>
+        <g id="hands">
+          <line id="hour" x1="50" y1="50" x2="50" y2="25" style="stroke-width:3px;stroke:#111"/>
+          <line id="min" x1="50" y1="50" x2="50" y2="15" style="stroke-width:3px;stroke:#111"/>
+          <line id="sec" x1="50" y1="55" x2="50" y2="12" style="stroke:#f55"/>
+        </g>
+      </svg>
+      <figcaption class="f6 f5-ns mv2 mv3-ns lh-copy">Cairo <small>GMT +5</small></figcaption>
+    </figure>
+    <figure class="w-third w-20-l ma0 fl tc">
+      <svg id="clock" viewBox="0 0 100 100">
+        <circle id="face" cx="50" cy="50" r="40" style="stroke-width:1px; stroke:#111;fill:#fff"/>
+        <g id="hands">
+          <line id="hour" x1="50" y1="50" x2="50" y2="25" style="stroke-width:3px;stroke:#111"/>
+          <line id="min" x1="50" y1="50" x2="50" y2="15" style="stroke-width:3px;stroke:#111"/>
+          <line id="sec" x1="50" y1="55" x2="50" y2="12" style="stroke:#f55"/>
+        </g>
+      </svg>
+      <figcaption class="f6 f5-ns mv2 mv3-ns lh-copy">Sydney <small>GMT +5</small></figcaption>
+    </figure> -->
+  </center>
+  </article>
+</section>
 <section class="ph3 ph4-ns pv3 pv5-ns near-white bg-near-black tc">
   <h2 class="f2 f1-ns mv0 lh-title tracked-tight wow animated fadeInDown">Get a Quote</h2>
   <h3 class="f4 f3-ns mv2 normal lh-copy wow animated fadeIn">Want to work with {{ site.title }}?</h3>
