--- a/design.html
+++ b/design.html
@@ -6,7 +6,7 @@ slug: design
 <section class="ph3 ph4-ns pv4 pv6-ns bg-white">
   <h2 class="f2 f1-ns lh-title tracked-tight wow animated fadeInDown">Visual Design</h2>
   <h3 class="f4 f3-ns normal measure-narrow lh-copy wow animated fadeIn">The best solutions seamlessly integrate your business objectives with your visual and verbal presentation. Style without substance is meaningless. Good design is timeless.</h3>
-  <center class="mv4 mv5-ns" data-flickity='{ "wrapAround": true }'>
+<!--   <center class="mv4 mv5-ns" data-flickity='{ "wrapAround": true }'>
     <article class="ph3 ph4-ns pv4 pv6-ns relative w-100 bg-navy near-white">
       <div id="particles-js" class="absolute absolute--fill"></div>
       <center class="center w-100">
@@ -41,12 +41,12 @@ slug: design
       <div id="autoplay" class="absolute absolute--fill">
         <video class="absolute absolute--fill" data-media='bg-video' preload="none" autoplay="autoplay" loop="loop" muted="muted">
           <source data-flickity-lazyload="{ site.baseurl }}assets/media/video/circus-co.mp4" src="{{ site.baseurl }}assets/media/video/circus-co.mp4" type="video/mp4">
-          <!-- <source src="{{ site.baseurl }}assets/media/video/portfolio_FILM.webm" type="video/webm">
-          <source src="{{ site.baseurl }}assets/media/video/portfolio_FILM.ogv"  type="video/ogg" codecs="theora, vorbis"> -->
+          <source src="{{ site.baseurl }}assets/media/video/portfolio_FILM.webm" type="video/webm">
+          <source src="{{ site.baseurl }}assets/media/video/portfolio_FILM.ogv"  type="video/ogg" codecs="theora, vorbis">
           Your user agent does not support the HTML5 Video element.
         </video>
       </div>
-    </article>
+    </article> -->
     <!-- <article class="ph3 ph4-ns pv4 pv6-ns mv4 relative bg-navy white">
       <center class="center w-100">
         <figure class="mw6">
@@ -68,8 +68,8 @@ slug: design
         <img data-flickity-lazyload="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-appchain-ALT_K100.png" src="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-appchain-ALT_K100.png" class="br-100 mh3 w5 wow animated fadeInDown" title="Appchain">
         <figcaption class="f6 f5-ns mv2 mv3-ns lh-copy">Nebuddha Icon <small>Dark</small></figcaption>
       </figure>
-    </center> -->
-  </center>
+    </center>
+  </center>-->
   <p class="measure lh-copy wow animated fadeIn">{{ site.title }} creates balanced solutions that reach consumers in innovative ways by focusing on the aesthetics of a site and its related materials by strategically implementing images, colors, fonts, and other elements.</p>
   <ul class="list pa0 mv4 measure-wide cf mid-gray wow animated fadeInUp">
     <label class="db mv1 tracked light-silver b ttu"><small>Visual Design Capabilities</small></label>
@@ -79,7 +79,7 @@ slug: design
     <li class="fl-ns w-50-ns"><small>3D & Environmental Design</small></li>
   </ul>
 </section>
-<section class="ph3 ph4-ns pv4 pv6-ns bg-white">
+<!-- <section class="ph3 ph4-ns pv4 pv6-ns bg-white">
   <center class="cf w-100 mw8 center">
     <figure class="w-50 w-third-m w-20-l ma0 fl tc">
       <svg id="clock" viewBox="0 0 100 100">
@@ -91,7 +91,7 @@ slug: design
         </g>
       </svg>
       <figcaption class="f6 f5-ns mv2 mv3-ns lh-copy">New York <small>GMT +5</small></figcaption>
-    </figure>
+    </figure> -->
     <!-- <figure class="w-third w-20-l ma0 fl tc">
       <svg id="clock" viewBox="0 0 100 100">
         <circle id="face" cx="50" cy="50" r="40" style="stroke-width:1px; stroke:#111;fill:#fff"/>
@@ -191,9 +191,9 @@ slug: design
       </svg>
       <figcaption class="f6 f5-ns mv2 mv3-ns lh-copy">Sydney <small>GMT +5</small></figcaption>
     </figure> -->
-  </center>
+<!--   </center>
   </article>
-</section>
+</section> -->
 <section class="ph3 ph4-ns pv3 pv5-ns near-white bg-near-black tc">
   <h2 class="f2 f1-ns mv0 lh-title tracked-tight wow animated fadeInDown">Get a Quote</h2>
   <h3 class="f4 f3-ns mv2 normal lh-copy wow animated fadeIn">Want to work with {{ site.title }}?</h3>
