--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ slug: home
     </ul>
   </div>
 </section>
-<section class="ph3 ph4-ns pv3 pv5-ns near-white bg-blue tc">
+<section class="ph3 ph4-ns pv4 pv5-ns light-gray bg-blue tc">
   <h2 class="f2 f1-ns mv0 lh-title tracked-tight wow animated fadeInDown">Get a Quote</h2>
   <h3 class="f4 f3-ns mv2 normal lh-copy wow animated fadeIn">Want to work with {{ site.title }}?</h3>
   <div class="wow animated fadeInUp">
@@ -120,7 +120,7 @@ slug: home
     <div id="map" class="absolute absolute--fill wow animated fadeIn" style="background-color:transparent"></div>
   </div>
 </section>
-<section class="ph3 ph4-ns pv3 pv5-ns near-black bg-near-white tc">
+<section class="ph3 ph4-ns pv4 pv5-ns near-black bg-near-white tc">
     <h2 class="f2 f1-ns mv0 lh-title tracked-tight wow animated fadeInDown">Enter your Email</h2>
     <h3 class="f4 f3-ns mv2 normal lh-copy wow animated fadeIn">Receive {{ site.title }} updates, news, and research surveys.</h3>
     <div id="mc_response"></div>
