--- a/strategy.html
+++ b/strategy.html
@@ -3,8 +3,21 @@ layout: page
 title: Strategy
 slug: strategy
 ---
-<section class="ph3 ph4-ns pv4 pv6-ns bg-near-white">
-  <div class="cf w-100">
+<section class="ph3 ph4-ns pv4 pv6-ns bg-white" id="strategy">
+  <h2 class="f2 f1-ns lh-title tracked-tight wow animated fadeInDown">User Scenarios and Persona Development</h2>
+  <h3 class="f4 f3-ns normal measure-narrow lh-copy wow animated fadeIn">{{ site.title }} develops personas to help focus decisions surrounding site components by adding a layer of real-world consideration to the conversation.</h3>
+  <p class="measure lh-copy wow animated fadeIn">{{ site.title }} focuses on your users and the tasks they need to perform rather than on your site's organization and internal structure. As a result, you will better understand what content your site must have and how it should be organized.</p>
+  <ul class="list pa0 mv4 measure-wide cf mid-gray wow animated fadeInUp">
+    <label class="db mv1 tracked light-silver b ttu"><small>Services</small></label>
+    <li class="fl-ns w-50-ns"><small>User scenarios and scripts</small></li>
+    <li class="fl-ns w-50-ns"><small>In-depth persona development</small></li>
+    <li class="fl-ns w-50-ns"><small>Contextual & individual interviews</small></li>
+    <li class="fl-ns w-50-ns"><small>Task analysis observation</small></li>
+    <li class="fl-ns w-50-ns"><small>Uses case & website entry points evaluation</small></li>
+  </ul>
+</section>
+<!-- <section class="ph3 ph4-ns pv4 pv6-ns bg-near-white">
+   <div class="cf w-100">
     <figure class="w-100 w-50-m w-25-l ma0 fl tc">
       <div id="internetPenetration_in" class="h5"></div>
       <figcaption class="f6 f5-ns mv2 mv3-ns measure-wide lh-copy">India</figcaption>
@@ -132,7 +145,7 @@ slug: strategy
     {% endfor %}
   </div>
 </section>
-<section class="ph3 ph4-ns pv4 pv6-ns near-white bg-near-black">
+<!-- <section class="ph3 ph4-ns pv4 pv6-ns near-white bg-near-black">
   <figure class="ma0">
     <div id="appRevenue" class="h5 mv2 mv4-ns"></div>
     <h2 class="f3 f2-ns mv0 lh-title tracked-tight wow animated fadeInDown">Global Mobile App Revenue (%) by Type</h2>
@@ -140,8 +153,8 @@ slug: strategy
     <label class="db mv3 mv4-ns tracked silver b ttu"><small>Source</small></label>
     <cite class="fs-normal silver"><a class="dib link blue underline-hover b ttu" href="strategy.html">U.S. Bureau of Labor Statistics<i class="fa fa-fw fa-long-arrow-right"></i></a></cite>
   </figure>
-</section>
-<section class="ph3 ph4-ns pv3 pv5-ns near-white bg-near-black tc">
+</section> -->
+<section class="ph3 ph4-ns pv4 pv5-ns light-silver bg-blue tc">
   <h2 class="f2 f1-ns mv0 lh-title tracked-tight wow animated fadeInDown">Get a Quote</h2>
   <h3 class="f4 f3-ns mv2 normal lh-copy wow animated fadeIn">Want to work with {{ site.title }}?</h3>
   <div class="wow animated fadeInUp">
