--- a/design.html
+++ b/design.html
@@ -194,7 +194,7 @@ slug: design
 <!--   </center>
   </article>
 </section> -->
-<section class="ph3 ph4-ns pv4 pv5-ns light-silver bg-blue tc">
+<section class="ph3 ph4-ns pv4 pv5-ns near-white bg-blue tc">
   <h2 class="f2 f1-ns mv0 lh-title tracked-tight wow animated fadeInDown">Get a Quote</h2>
   <h3 class="f4 f3-ns mv2 normal lh-copy wow animated fadeIn">Want to work with {{ site.title }}?</h3>
   <div class="wow animated fadeInUp">
