--- a/strategy.html
+++ b/strategy.html
@@ -4,16 +4,15 @@ title: Strategy
 slug: strategy
 ---
 <section class="ph3 ph4-ns pv4 pv6-ns bg-white" id="strategy">
-  <h2 class="f2 f1-ns lh-title tracked-tight wow animated fadeInDown">User Scenarios and Persona Development</h2>
-  <h3 class="f4 f3-ns normal measure-narrow lh-copy wow animated fadeIn">{{ site.title }} develops personas to help focus decisions surrounding site components by adding a layer of real-world consideration to the conversation.</h3>
-  <p class="measure lh-copy wow animated fadeIn">{{ site.title }} focuses on your users and the tasks they need to perform rather than on your site's organization and internal structure. As a result, you will better understand what content your site must have and how it should be organized.</p>
+  <h2 class="f2 f1-ns lh-title tracked-tight wow animated fadeInDown">User Research</h2>
+  <h3 class="f4 f3-ns normal measure-narrow lh-copy wow animated fadeIn">{{ site.title }} focuses on understanding your user behaviors, needs, and motivations.</h3>
+  <p class="measure lh-copy wow animated fadeIn">Understanding the impact of design on your audience helps identify project challenges upfront and respond to users needs while still meeting your professional goals.</p>
   <ul class="list pa0 mv4 measure-wide cf mid-gray wow animated fadeInUp">
-    <label class="db mv1 tracked light-silver b ttu"><small>Services</small></label>
-    <li class="fl-ns w-50-ns"><small>User scenarios and scripts</small></li>
-    <li class="fl-ns w-50-ns"><small>In-depth persona development</small></li>
+    <label class="db mv1 tracked light-silver b ttu"><small>User Research Capabilities</small></label>
     <li class="fl-ns w-50-ns"><small>Contextual & individual interviews</small></li>
-    <li class="fl-ns w-50-ns"><small>Task analysis observation</small></li>
-    <li class="fl-ns w-50-ns"><small>Uses case & website entry points evaluation</small></li>
+    <li class="fl-ns w-50-ns"><small>Target audience & segmentations</small></li>
+    <li class="fl-ns w-50-ns"><small>User entry points & pathways</small></li>
+    <li class="fl-ns w-50-ns"><small>Conversion funnel development</small></li>
   </ul>
 </section>
 <!-- <section class="ph3 ph4-ns pv4 pv6-ns bg-near-white">
