--- a/strategy.html
+++ b/strategy.html
@@ -12,7 +12,7 @@ slug: strategy
     <li class="fl-ns w-50-ns"><small>Contextual & individual interviews</small></li>
     <li class="fl-ns w-50-ns"><small>Target audience & segmentations</small></li>
     <li class="fl-ns w-50-ns"><small>User entry points & pathways</small></li>
-    <li class="fl-ns w-50-ns"><small>Conversion funnel development</small></li>
+    <li class="fl-ns w-50-ns"><small>Conversion funnels & optimization</small></li>
   </ul>
 </section>
 <!-- <section class="ph3 ph4-ns pv4 pv6-ns bg-near-white">
