--- a/strategy.html
+++ b/strategy.html
@@ -5,7 +5,7 @@ slug: strategy
 ---
 <section class="ph3 ph4-ns pv4 pv6-ns bg-white" id="strategy">
   <h2 class="f2 f1-ns lh-title tracked-tight wow animated fadeInDown">User Research</h2>
-  <h3 class="f4 f3-ns normal measure-narrow lh-copy wow animated fadeIn">{{ site.title }} focuses on understanding your user behaviors, needs, and motivations.</h3>
+  <h3 class="f4 f3-ns normal measure-narrow lh-copy wow animated fadeIn">{{ site.title }} focuses on understanding your user's behaviors, needs, and motivations.</h3>
   <p class="measure lh-copy wow animated fadeIn">Understanding the impact of design on your audience helps identify project challenges upfront and respond to users needs while still meeting your professional goals.</p>
   <ul class="list pa0 mv4 measure-wide cf mid-gray wow animated fadeInUp">
     <label class="db mv1 tracked light-silver b ttu"><small>User Research Capabilities</small></label>
