--- a/strategy.html
+++ b/strategy.html
@@ -8,7 +8,7 @@ slug: strategy
   <h3 class="f4 f3-ns normal measure-narrow lh-copy wow animated fadeIn">{{ site.title }} focuses on understanding your user's behaviors, needs, and motivations.</h3>
   <p class="measure lh-copy wow animated fadeIn">Understanding the impact of design on your audience helps identify project challenges upfront and respond to users needs while still meeting your professional goals.</p>
   <ul class="list pa0 mv4 measure-wide cf mid-gray wow animated fadeInUp">
-    <label class="db mv1 tracked light-silver b ttu"><small>User Research Capabilities</small></label>
+    <label class="db mv1 tracked light-silver b ttu"><small>User Research and Survey Capabilities</small></label>
     <li class="fl-ns w-50-ns"><small>Digital surveys and questionaires</small></li>
     <li class="fl-ns w-50-ns"><small>Contextual and individual interviews</small></li>
     <li class="fl-ns w-50-ns"><small>Target audience and segmentations</small></li>
